# autogyro-autopilot

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/config/: flight.rs  hardware.rs  mod.rs
src/control/: attitude.rs  fuzzy.rs  mod.rs
src/data/: mod.rs
src/drivers/: mod.rs
src/drivers/actuators/: dshot.rs  mod.rs  servo.rs
src/drivers/baro/: bmp280.rs  mod.rs
src/drivers/imu/: mod.rs  mpu6050.rs  mpu6500.rs  mpu9250.rs
src/drivers/mag/: hmc5983.rs  mod.rs
src/sensors/: altitude.rs  fusion.rs  mod.rs
src/tasks/: actuator_task.rs  control_task.rs  mod.rs  sensor_task.rs
src/utils/: filters.rs  math.rs  mod.rs  system_info.rs
