[package]
name = "autogyro-autopilot"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt","executor-interrupt"] } #, "integrated-timers"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "time-driver","rp2040"] }
dshot-encoder = { git = "https://github.com/peterkrull/dshot-encoder" }
nalgebra = { version = "0.33.0", default-features = false, features = [
    "serde-serialize-no-std",
    "libm",
] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
libm = "0.2.15"
heapless={version = "0.8.0"}

[dependencies.fuzzy_controller]
version = "0.1.1"
git = "https://github.com/Ares566/rust_fuzzy_controller"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[features]
debug-actuators = []
debug-sensors = []

[profile.dev]
lto = true

[[bin]]
name = "autogyro-autopilot"
test = false
doctest = false
bench = false